turtleart.lessons.turtleart.Main.House.scala.error
Source:6: error: type mismatch;
 found   : Double
 required: Int
	x = getX
            ^Source:7: error: type mismatch;
 found   : Double
 required: Int
	y = getY
            ^